(style) fixed layout issues movieList issues

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -4,7 +4,7 @@
 
 #list-table {
   margin-bottom: 50px;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 #movie-list {
